--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3693,6 +3693,9 @@
 		}
 
 		@media screen and (max-width: 736px) {
+			.carousel {
+				height: 350px;
+			}
 
 			#main > header {
 				padding: 5em 3em 3em 3em ;
